fix: fixing incorrect title text wrapping in drawer (#1126)

--- a/packages/components/src/drawer/Drawer.less
+++ b/packages/components/src/drawer/Drawer.less
@@ -10,10 +10,16 @@
   max-height: 100vh;
 
   .np-drawer-header,
+  .np-drawer-footer,
+  .np-drawer-content {
+    padding: var(--size-16);
+  }
+
+  .np-drawer-header,
   .np-drawer-footer {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
   }
 
   .np-drawer-content {
@@ -22,7 +28,6 @@
   }
 
   .np-drawer-header {
-    height: var(--size-56);
     min-height: var(--size-56);
 
     &.np-drawer-header--withborder {
@@ -37,37 +42,26 @@
   }
 
   .np-drawer-footer {
-    padding-top: 12px;
-    padding-bottom: 12px;
     box-shadow: inset 0 1px 0 0 rgb(226, 230, 232);
   }
 
-  .np-drawer-p-x {
-    .p-x-2;
-  }
+  .np-drawer-header--title {
+    // TODO - remove when typography styles get updated (#942)
+    font-size: 20px;
+    line-height: var(--size-24);
+    margin-left: var(--size-16);
 
-  .np-drawer-p-y {
-    .p-y-3;
+    // Fix font alignment issue
+    margin-bottom: -2px;
   }
 }
 
 @media (--screen-md) {
   .np-drawer {
-    .np-drawer-header {
-      height: var(--size-64);
-      min-height: var(--size-64);
-    }
-
-    .np-drawer-p-x {
-      .p-x-4;
-    }
-
-    .np-drawer-footer {
-      .p-y-3;
+    .np-drawer-header,
+    .np-drawer-footer,
+    .np-drawer-content {
+      padding: var(--size-24);
     }
   }
-}
-
-.np-drawer-header--title {
-  margin-bottom: -1px;
 }
